testdata/golden/sema/invalid/concurrency/send_contains_nonsend_nested.fmt
// ERROR: @send type contains nested non-sendable field

@nosend
type Connection = { socket: int };

type Client = { conn: Connection };

@send
type Service = {
    client: Client,  // ERROR: contains nested @nosend type
};
